# phone-number-fastapi

./: Dockerfile  phone_number.py  pyproject.toml  requirements.txt
